fix(small-class): avatar user name overflow

--- a/desktop/renderer-app/src/pages/SmallClassPage/SmallClassAvatar.less
+++ b/desktop/renderer-app/src/pages/SmallClassPage/SmallClassAvatar.less
@@ -117,6 +117,11 @@
 }
 
 .small-class-avatar-title {
+    width: 50%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    white-space: nowrap;
     position: absolute;
     z-index: 20;
     bottom: 4px;
